--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
-title: "loBofill\'s homepage this is"
+title: loBofill's homepage this is
 theme: jekyll-theme-midnight
+description: I'll try to fill this up with interesting stuff!
